--- a/javascript/datatype-string-ex2.html
+++ b/javascript/datatype-string-ex2.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <script>
+        var a = "hello world";
+       console.log(a.length);
+
+       
     </script>
 </body>
 </html>
