--- a/교재연습/296p-js_parsel.html
+++ b/교재연습/296p-js_parsel.html
@@ -6,7 +6,7 @@
     </style>
     <title>Calculator</title>
     <script>
-        function cale() {
+        function calc() {
             var x = document.getElementById("x").value;
             var y = document.getElementById("y").value;
             var sum;
