--- a/javascript/for-ex7-exercises.html
+++ b/javascript/for-ex7-exercises.html
@@ -73,42 +73,48 @@
             console.log(txt);
         }
 
-        console.log("----문제7------"); // 01234
+        console.log("----문제7------");
         for (var i = 0; i < 5; i++) {
-            var txt = "number";
-            for (var j = 0; j <= i; j++) {
-                txt += "numver";
+            // console.log("01234");
+            var txt = "";
+            for (var j = 0; j < 5; j++) {
+                txt += j;
             }
             console.log(txt);
         }
 
-        console.log("----문제8------");
+        console.log("----문제8------"); // 이해안됌
         for (var i = 0; i < 5; i++) {
-            var txt = "number";
-            for (var j = 0; j <= i; j++) {
-                txt += "numver";
+            // console.log("01234");
+            var txt = "";
+            for (var j = i; j < i+5; j++) {
+                txt += j;
             }
             console.log(txt);
         }
 
         console.log("----문제9------");
         for (var i = 0; i < 5; i++) {
-            var txt = "number";
+            // console.log("01234");
+            var txt = "";
             for (var j = 0; j <= i; j++) {
-                txt += "numver";
+                txt += j;
             }
             console.log(txt);
         }
 
         console.log("----문제10------");
+        var k = 0;
         for (var i = 0; i < 5; i++) {
-            var txt = "number";
+            // console.log("01234");
+            var txt = "";
             for (var j = 0; j <= i; j++) {
-                txt += "numver";
+                txt += (k % 10);
+                k++;
             }
             console.log(txt);
         }
-    </script>
+
     </script>
 </body>
 </html>
