--- a/javascript/dom-ex7-style.html
+++ b/javascript/dom-ex7-style.html
@@ -14,7 +14,9 @@
     <script>
         var h1 = document.getElementById("head1");
         h1.style.color = "blue";
-        
+        h1.style.fontSize = "14px";
+        h1.style.backgroundColor = "yellow";
+
     </script>
 </body>
 </html>
