--- a/javascript/for-ex7-exercises.html
+++ b/javascript/for-ex7-exercises.html
@@ -83,7 +83,7 @@
             console.log(txt);
         }
 
-        console.log("----문제8------"); // 이해안됌
+        console.log("----문제8------");
         for (var i = 0; i < 5; i++) {
             // console.log("01234");
             var txt = "";
@@ -104,7 +104,7 @@
         }
 
         console.log("----문제10------");
-        var k = 0;
+        var k = 50;
         for (var i = 0; i < 5; i++) {
             // console.log("01234");
             var txt = "";
