--- a/javascript/dom-ex1.getElementById.html
+++ b/javascript/dom-ex1.getElementById.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,15 +6,12 @@
     <style>
     </style>
 </head>
-<!-- p#para1*5>lorem3 -->
-
-<p id="para1">Lorem, ipsum dolor.</p>
-<p id="para1">Deserunt, deleniti eos!</p>
-<p id="para1">Vitae, pariatur quae.</p>
-<p id="para1">Tempora, illum sed.</p>
-<p id="para1">Earum, nobis eveniet.</p>
-
 <body>
+    <p id="para1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam cupiditate neque optio possimus a voluptatibus suscipit iure saepe quod qui consequatur inventore, iste blanditiis provident eum, voluptate beatae. Repellat, explicabo!</p>
+    <p id="para2">Vero veritatis aliquid expedita molestiae quas, excepturi non porro odit fugiat possimus, voluptatum nulla, sint dignissimos. Sed architecto quos ratione repellendus libero eligendi dolor, itaque quidem quam laudantium nulla doloremque!</p>
+    <p id="para3">Necessitatibus officiis laborum molestias consequuntur et facere reprehenderit ea sapiente repellat, commodi nobis modi distinctio repudiandae enim porro doloremque tenetur tempore deserunt ipsum eaque possimus voluptatum recusandae iure cum. Ad.</p>
+    <p id="para4">Accusamus rerum consectetur ratione! Eius facilis fugiat at odit impedit dolores fuga nemo explicabo quibusdam, culpa provident esse recusandae accusantium voluptatem quas modi quaerat laudantium saepe deserunt laboriosam iusto? Repellendus.</p>
+    <p id="para5">Repellendus incidunt nam minus neque ad iure, aspernatur impedit id hic numquam cumque enim animi modi consectetur exercitationem repudiandae deserunt commodi! Veritatis obcaecati minus laborum placeat quo nobis numquam ipsa?</p>
     <script>
 
         var p1 = document.getElementById("para1");
@@ -21,7 +19,7 @@
         console.log(p1);
 
         p1.innerHTML = "hello world";
-
+        
     </script>
 </body>
 </html>
