--- a/javascript/dom-ex4-querySelectorAll.html
+++ b/javascript/dom-ex4-querySelectorAll.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,13 +7,11 @@
     </style>
 </head>
 <body>
-  <!---  h1#head$*5>lorem1 -->
-
     <h1 class="note" id="head1">Lorem.</h1>
-    <h1 class="note error" id="head2">Hic?</h1>
-    <h1 class="note error" id="head3">Assumenda.</h1>
-    <h1 id="head4">Quibusdam!</h1>
-    <h1 id="head5">Deleniti.</h1>
+    <h1 class="note error" id="head2">Molestiae?</h1>
+    <h1 class="note error" id="head3">Maiores.</h1>
+    <h1 id="head4">Esse.</h1>
+    <h1 id="head5">Excepturi!</h1>
     <script>
         var heads = document.querySelectorAll("h1");
         console.log(heads.length);
@@ -25,7 +24,7 @@
 
         for (var i = 0; i < ne.length; i++) {
             ne[i].innerHTML = "HELLO";
-        } 
-        </script>
+        }
+    </script>
 </body>
 </html>
