--- a/javascript/dom-ex5-querySelector copy.html
+++ b/javascript/dom-ex5-querySelector copy.html
@@ -11,12 +11,14 @@
     <h1 class="note error" id="head3">Minima.</h1>
     <h1 class="note error" id="head4">Libero.</h1>
     <h1 id="head5">Corrupti.</h1>
-    <script>
-        var h1 = document.querySelector("#head1");
-        console.log(h1.innerHTML);
 
-        var h2 = document.querySelector(".note");
-        console.log(h2.innerHTML);
+    <img src="el.png" alt="" id="12">
+
+    <script>
+        var a = document.getElementById(id="head1").innerHTML;
+
+        console.log(a);
+
 
 
     </script>
