--- a/jquery/effect-ex9-animate.html
+++ b/jquery/effect-ex9-animate.html
@@ -18,13 +18,18 @@
                     width: "700px", 
                     height: "500px",
                     fontSize: "30px",
+                    // 함수안에서는 붙여쓰고 대문자
                     left: "100px"
-                    }, 3000);
+                }, 3000);
             })
         });
     </script>
 </head>
 <body>
     <div class="mydiv">lorem, ipsum dolor.</div>
+    <div class="mydiv">lorem, ipsum dolor.</div>
+    <!-- id는 고유명사 하나만 쓸수있음 같은거 여러개 쓰면 
+    맨 위에껏만 실행됨
+    classs는 여러번 써도 상관없음 --> 
 </body>
 </html>
