--- a/교재연습/55p-table-ex2.html
+++ b/교재연습/55p-table-ex2.html
@@ -45,11 +45,11 @@
         <td></td>
     </tr>
     <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>성악 아카데미</td>
+        <td>김호성</td>
+        <td>강의를 통해 배우고 익힌 곡을 음악회를 통하여 기량을 향상하고 무대를 경험한다.</td>
+        <td>H30</td>
+        <td>300,000원</td>
     </tr>
 
 </table>
