--- a/jquery/dom-traversing-ex3-parents.html
+++ b/jquery/dom-traversing-ex3-parents.html
@@ -6,22 +6,17 @@
     <style>
     </style>
     <script>
-
         $(document).ready(function() {
-            $("p").parent().css("border": 5px solid green)
+            $("span").parents().css("border", "5px solid green");
+
         });
     </script>
 </head>
 <body>
-    
     <div>
-        <p>Lorem, ipsum dolor.</p>
+        <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe itaque molestiae fugit natus tempora unde eius modi illo accusantium. Nam velit placeat sunt deleniti molestiae beatae illo facere magni quas.</span></p>
     </div>
-    <div>
-        <p>Quos, impedit in.</p>
-    </div>
-    <div>
-        <p>Nihil, officiis nisi!</p>
-    </div>
+
+
 </body>
 </html>
